cabal-version: 3.0
name: numhask-array
version: 0.12
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2016
category: math
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/numhask-array#readme
bug-reports: https://github.com/tonyday567/numhask-array/issues
synopsis: Multi-dimensional arrays.
description:
    This package provides an interface into the [numhask](https://hackage.haskell.org/package/numhask) API, and both type- and value-level shape manipulation routines.

    == Usage

    >>> {-# LANGUAGE RebindableSyntax #-}
    >>> import NumHask.Prelude
    >>> import NumHask.Array

    In situations where shape is only known at runtime, a clear module configuration is:

    >>> import NumHask.Array.Shape
    >>> import qualified NumHask.Array.Fixed as F
    >>> import qualified NumHask.Array.Dynamic as D

build-type: Simple
tested-with: GHC == 8.10.7 || ==9.2.8 || ==9.4.5 || ==9.6.2
extra-doc-files: ChangeLog.md

source-repository head
    type: git
    location: https://github.com/tonyday567/numhask-array

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    if impl ( ghc >= 9.2 )
        default-language: GHC2021

    if impl ( ghc < 9.2 )
        default-language: Haskell2010
        default-extensions:
            BangPatterns
            BinaryLiterals
            ConstrainedClassMethods
            ConstraintKinds
            DeriveDataTypeable
            DeriveFoldable
            DeriveFunctor
            DeriveGeneric
            DeriveLift
            DeriveTraversable
            DoAndIfThenElse
            EmptyCase
            EmptyDataDecls
            EmptyDataDeriving
            ExistentialQuantification
            ExplicitForAll
            FlexibleContexts
            FlexibleInstances
            ForeignFunctionInterface
            GADTSyntax
            GeneralisedNewtypeDeriving
            HexFloatLiterals
            ImplicitPrelude
            InstanceSigs
            KindSignatures
            MonomorphismRestriction
            MultiParamTypeClasses
            NamedFieldPuns
            NamedWildCards
            NumericUnderscores
            PatternGuards
            PolyKinds
            PostfixOperators
            RankNTypes
            RelaxedPolyRec
            ScopedTypeVariables
            StandaloneDeriving
            StarIsType
            TraditionalRecordSyntax
            TupleSections
            TypeApplications
            TypeOperators
            TypeSynonymInstances

    if impl ( ghc < 9.2 ) && impl ( ghc >= 8.10 )
        default-extensions:
            ImportQualifiedPost
            StandaloneKindSignatures

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , adjunctions  >=4.0 && <5
        , base         >=4.7 && <5
        , distributive >=0.4 && <0.7
        , numhask      >=0.10 && <0.13
        , vector       >=0.12.3 && <0.14
    exposed-modules:
        NumHask.Array
        NumHask.Array.Dynamic
        NumHask.Array.Fixed
        NumHask.Array.Shape
