cabal-version: 3.0
name: numhask-array
version: 0.12
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2016
category: math
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/numhask-array#readme
bug-reports: https://github.com/tonyday567/numhask-array/issues
synopsis: Multi-dimensional arrays.
description:
    This package provides an interface into the [numhask](https://hackage.haskell.org/package/numhask) API, and both type- and value-level shape manipulation routines.

    == Usage

    >>> {-# LANGUAGE RebindableSyntax #-}
    >>> import NumHask.Prelude
    >>> import NumHask.Array

    In situations where shape is only known at runtime, a clear module configuration is:

    >>> import NumHask.Array.Shape
    >>> import qualified NumHask.Array.Fixed as F
    >>> import qualified NumHask.Array.Dynamic as D

build-type: Simple
tested-with:
    , GHC == 9.10.1
    , GHC == 9.8.2
    , GHC == 9.6.5
extra-doc-files: ChangeLog.md

source-repository head
    type: git
    location: https://github.com/tonyday567/numhask-array

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    default-language: GHC2021

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , adjunctions  >=4.0 && <5
        , base         >=4.14 && <5
        , distributive >=0.4 && <0.7
        , numhask      >=0.12 && <0.13
        , prettyprinter >= 1.7 && <1.8
        , random        >=1.2 && <1.3
        , vector       >=0.12.3 && <0.14
        , vector-algorithms
    exposed-modules:
        NumHask.Array
        NumHask.Array.Dynamic
        NumHask.Array.Fixed
        NumHask.Array.Shape
        NumHask.Array.Sort

test-suite doctests
    import: ghc2021-stanza
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: doctests.hs
    ghc-options: -threaded
    build-depends:
        , base
        , numhask-array
        , doctest-parallel >=0.3 && <0.4
    default-extensions: RebindableSyntax
